refactor(project): rename package from autogl-gui to autoglm-gui
This commit renames the entire project from AutoGL-GUI to AutoGLM-GUI to better reflect the project's purpose and branding. The change includes:

- Renamed package directory from AutoGL_GUI to AutoGLM_GUI
- Updated all import statements and references throughout the codebase
- Modified build configuration in pyproject.toml and build scripts
- Updated GitHub Actions workflow to use new package name
- Enhanced CLI entry point with improved argument parsing and help output
- Updated .gitignore patterns for the new package structure

BREAKING CHANGE: The package name has changed from 'autogl-gui' to 'autoglm-gui'. All import statements and package references must be updated accordingly.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,8 +51,8 @@ jobs:
 
       - name: Copy Static Files
         run: |
-          mkdir -p AutoGL_GUI/static
-          cp -r frontend/dist/* AutoGL_GUI/static/
+          mkdir -p AutoGLM_GUI/static
+          cp -r frontend/dist/* AutoGLM_GUI/static/
 
       - name: Build Package
         run: uv build
