--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,17 +32,17 @@ Homepage = "https://github.com/suyiiyii/AutoGLM-GUI"
 Repository = "https://github.com/suyiiyii/AutoGLM-GUI"
 
 [project.scripts]
-autoglm-gui = "AutoGL_GUI.__main__:main"
+autoglm-gui = "AutoGLM_GUI.__main__:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["AutoGL_GUI"]
+packages = ["AutoGLM_GUI"]
 
 [tool.hatch.build.targets.sdist]
-include = ["AutoGL_GUI/**/*"]
+include = ["AutoGLM_GUI/**/*"]
 
 [tool.hatch.build]
-artifacts = ["AutoGL_GUI/static/**/*"]
+artifacts = ["AutoGLM_GUI/static/**/*"]
