feat(electron): add linux platform support

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -229,11 +229,127 @@ jobs:
           path: ${{ steps.artifacts.outputs.blockmap_path }}
           retention-days: 7
 
+  build-linux:
+    name: Build for Linux
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 10
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'pnpm'
+          cache-dependency-path: 'frontend/pnpm-lock.yaml'
+
+      - name: Verify pnpm installation
+        run: |
+          pnpm --version
+          which pnpm
+
+      - name: Get pnpm store directory
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - name: Cache pnpm store
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Cache uv
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/uv
+          key: ${{ runner.os }}-uv-${{ hashFiles('**/uv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-uv-
+
+      - name: Build application
+        run: uv run python scripts/build_electron.py
+
+      - name: List dist directory
+        run: |
+          ls -lh electron/dist/
+
+      - name: Get Linux artifact paths
+        id: artifacts
+        run: |
+          # Find AppImage file
+          appimage_file=$(find electron/dist -type f -name "*.AppImage" | head -n 1)
+          if [ -n "$appimage_file" ]; then
+            appimage_name=$(basename "$appimage_file" | tr ' ' '-')
+            echo "appimage_name=$appimage_name" >> $GITHUB_OUTPUT
+            echo "appimage_path=$appimage_file" >> $GITHUB_OUTPUT
+            echo "Found AppImage: $appimage_name"
+          fi
+
+          # Find deb file
+          deb_file=$(find electron/dist -type f -name "*.deb" | head -n 1)
+          if [ -n "$deb_file" ]; then
+            deb_name=$(basename "$deb_file" | tr ' ' '-')
+            echo "deb_name=$deb_name" >> $GITHUB_OUTPUT
+            echo "deb_path=$deb_file" >> $GITHUB_OUTPUT
+            echo "Found deb: $deb_name"
+          fi
+
+          # Find tar.gz file
+          targz_file=$(find electron/dist -type f -name "*.tar.gz" | head -n 1)
+          if [ -n "$targz_file" ]; then
+            targz_name=$(basename "$targz_file" | tr ' ' '-')
+            echo "targz_name=$targz_name" >> $GITHUB_OUTPUT
+            echo "targz_path=$targz_file" >> $GITHUB_OUTPUT
+            echo "Found tar.gz: $targz_name"
+          fi
+
+      - name: Upload Linux AppImage
+        if: steps.artifacts.outputs.appimage_name
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ steps.artifacts.outputs.appimage_name }}
+          path: ${{ steps.artifacts.outputs.appimage_path }}
+          retention-days: 7
+
+      - name: Upload Linux deb
+        if: steps.artifacts.outputs.deb_name
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ steps.artifacts.outputs.deb_name }}
+          path: ${{ steps.artifacts.outputs.deb_path }}
+          retention-days: 7
+
+      - name: Upload Linux tar.gz
+        if: steps.artifacts.outputs.targz_name
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ steps.artifacts.outputs.targz_name }}
+          path: ${{ steps.artifacts.outputs.targz_path }}
+          retention-days: 7
+
   # Summary job to check if all builds succeeded
   build-summary:
     name: Build Summary
     runs-on: ubuntu-latest
-    needs: [build-windows, build-macos]
+    needs: [build-windows, build-macos, build-linux]
     if: always()
 
     steps:
@@ -241,8 +357,9 @@ jobs:
         run: |
           echo "Windows build: ${{ needs.build-windows.result }}"
           echo "macOS build: ${{ needs.build-macos.result }}"
+          echo "Linux build: ${{ needs.build-linux.result }}"
 
-          if [ "${{ needs.build-windows.result }}" != "success" ] || [ "${{ needs.build-macos.result }}" != "success" ]; then
+          if [ "${{ needs.build-windows.result }}" != "success" ] || [ "${{ needs.build-macos.result }}" != "success" ] || [ "${{ needs.build-linux.result }}" != "success" ]; then
             echo "❌ Some builds failed"
             exit 1
           else
