--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,9 @@ dependencies = [
     "fastapi>=0.124.0",
     "fastmcp>=2.0.0",
     "httpx[socks]>=0.28.1",
+    "jinja2>=3.1.0",  # Required by MAI agent for prompt templating
     "loguru>=0.7.3",
+    "numpy>=1.24.0",  # Required by MAI agent
     "openai>=2.9.0",
     "openai-agents>=0.6.4",
     "pillow>=11.3.0",
@@ -47,10 +49,10 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["AutoGLM_GUI", "phone_agent"]
-force-include = {"scrcpy-server-v3.3.3" = "scrcpy-server-v3.3.3"}
+force-include = {"scrcpy-server-v3.3.3" = "scrcpy-server-v3.3.3", "mai_agent" = "mai_agent"}
 
 [tool.hatch.build.targets.sdist]
-include = ["AutoGLM_GUI/**/*", "phone_agent/**/*", "scrcpy-server-v3.3.3"]
+include = ["AutoGLM_GUI/**/*", "phone_agent/**/*", "mai_agent/**/*", "scrcpy-server-v3.3.3"]
 
 [tool.hatch.build]
 artifacts = ["AutoGLM_GUI/static/**/*"]
