Feat/macos intel x64 support (#117)
* feat: add macOS Intel (x64) architecture support

- Add x64 arch to electron-builder.yml mac target config
- Add build-macos-x64 job in build.yml using macos-13 runner
- Add build-electron-macos-x64 job in release.yml for release builds
- Update build-summary to include macOS x64 build status check

This enables building DMG installers for Intel-based Macs.

Closes #112

* fix: remove explicit arch config to avoid cross-compilation issues

The electron-builder was configured to build both arm64 and x64 on the
same machine, which causes:
1. hdiutil resource conflicts when building DMGs in parallel
2. PyInstaller backend binary architecture mismatch (ARM64 machine
   cannot produce valid x64 Python binaries)

Solution: Let each runner build only its native architecture by not
specifying arch in the config. The separate macos-13 (Intel) and
macos-latest (ARM64) runners will each build their respective versions.

* fix: resolve hdiutil resource busy error on macOS CI

- Add dmg config with writeUpdateInfo: false and format: ULFO
- Use macos-13 runner (stable Intel runner)
- Add step to disable Spotlight indexing before build
- Kill mds processes to prevent disk image access conflicts

The hdiutil 'Resource busy' error occurs when Spotlight or other
macOS services access the DMG during creation. Disabling Spotlight
indexing and using optimized DMG format should resolve this.

* chore: update macOS runner version for builds

- Changed macOS runner from macos-13 to macos-15-intel for both build and release workflows to ensure compatibility with the latest features and improvements.

--- a/electron/electron-builder.yml
+++ b/electron/electron-builder.yml
@@ -46,6 +46,12 @@ mac:
   # 开发阶段不签名，使用 xattr -cr 移除隔离属性
   identity: null
 
+dmg:
+  # 禁用 writeUpdateInfo 避免额外的磁盘操作
+  writeUpdateInfo: false
+  # 使用简单的 DMG 格式，减少 hdiutil 操作
+  format: ULFO
+
 linux:
   target:
     - AppImage    # 最通用的格式，无需安装
